--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,7 +82,7 @@ jobs:
             cd ./build/build/
             mv index.html 200.html # workaround for spa router
             # echo "testing.cryptohero.pro" >> CNAME # add custom domain
-            surge --project ./ --domain preview.dasdaq.io
+            surge --project ./ --domain lost.etherfen.com
 
 
 workflows:
