--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bizcharts-plugin-slider": "^2.0.3",
     "js-cookie": "^2.2.0",
     "material-ui": "^0.20.1",
+    "nasa.js": "^0.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-intl-universal": "^1.11.4",
