--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "reactjs-popup": "^1.1.1",
     "redux": "^4.0.0"
   },
   "scripts": {
