--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "reactjs-popup": "^1.1.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "superagent": "^3.8.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
