--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@antv/data-set": "^0.8.9",
     "antd": "^3.6.6",
     "axios": "^0.18.0",
+    "bignumber.js": "^7.2.1",
     "bizcharts": "^3.1.10",
     "bizcharts-plugin-slider": "^2.0.3",
     "js-cookie": "^2.2.0",
