--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - "9e:c1:c4:3a:a3:61:f0:28:da:47:38:fa:4b:ed:ec:26"
+            # - "9e:c1:c4:3a:a3:61:f0:28:da:47:38:fa:4b:ed:ec:26"
       - attach_workspace: 
           at: ~/repo/build
       - run:
@@ -67,7 +67,7 @@ jobs:
             git init
             git add .
             git commit -m "Update website content"
-            git push --force --quiet git@github.com:Dasdaq/static-website-files-for-dasdaq-dot-io.git master:master
+            # git push --force --quiet git@github.com:Dasdaq/static-website-files-for-dasdaq-dot-io.git master:master
   deploy-testing:
     <<: *defaults
     steps:
@@ -81,7 +81,6 @@ jobs:
             sudo npm i -g surge          
             cd ./build/build/
             mv index.html 200.html # workaround for spa router
-            # echo "testing.cryptohero.pro" >> CNAME # add custom domain
             surge --project ./ --domain lost.etherfen.com
 
 
