--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ethereum-blockies-png": "^0.1.3",
     "js-cookie": "^2.2.0",
     "material-ui": "^0.20.1",
+    "moment": "^2.22.2",
     "nasa.js": "^0.1.2",
     "react": "^16.4.1",
     "react-async": "^2.1.0",
