--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-ui": "^0.20.1",
     "moment": "^2.22.2",
     "nasa.js": "^0.1.2",
+    "nebulas": "^0.5.5",
     "react": "^16.4.1",
     "react-async": "^2.1.0",
     "react-dom": "^16.4.1",
